--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,8 @@ body *, body *::before, body *::after {
   border-radius: 10px;
   padding: 60px;
 }
-.warningMsg {
+.warningMsg,
+.deletingMsg {
   display: block;
   font-size: 20px;
   color: rgb(72, 91, 167);
@@ -350,8 +351,25 @@ body *, body *::before, body *::after {
   font-size: 16px;
   font-family: 'Playfair Display', 'Noto Serif KR', serif;
 }
+.deleteConfirm,
+.deleteClose {
+  float: left;
+  width: 45%;
+  margin: 25px 5px 0 5px;
+  cursor: pointer;
+  background-color: #2b313f;
+  color: #fff;
+  border: 0;
+  padding: 10px;
+  font-size: 16px;
+  font-family: 'Playfair Display', 'Noto Serif KR', serif;
+}
 
 .footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   margin-top: 100px;
   padding: 20px;
   background-color: #333;
